refactor: corregir arquitectura, seguridad y compatibilidad frontend-backend
- Seguridad: /api/auth/** público, resto requiere JWT; @EnableMethodSecurity + @PreAuthorize por rol en todos los endpoints
- CORS: leer allowed origins desde application.properties en vez de wildcard
- OrdenCompra: estado tipado con enum EstadoOrden; fechas LocalDate/LocalDateTime; relaciones JPA con @JsonIgnore + getters virtuales planos para compatibilidad frontend
- Proveedor: agregar rut, activo, formaPagoHabitual; CRUD completo
- Producto: categoria como @ManyToOne Categoria (antes String)
- Validación: @NotBlank en entidades + @Valid en controllers de creación/edición
- GlobalExceptionHandler: @RestControllerAdvice con manejo de validación, runtime y errores genéricos
- CompraService: extraer lógica de CompraController a service con @Transactional
- RecepcionController: agregar endpoints PATCH /detalles y PATCH /ordenes/{id}/cerrar
- GET /api/ordenes/activa: devuelve orden en estado LISTA_PARA_COMPRAR o EN_COMPRA
- toDouble(): loguear warning en vez de fallar silenciosamente
- Repositorios: queries útiles con tipos correctos (EstadoOrden enum)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>